[gd_scene load_steps=5 format=2]

[ext_resource path="res://hand_skeleton.gd" type="Script" id=1]
[ext_resource path="res://right_hand_model.glb" type="PackedScene" id=2]
[ext_resource path="res://extendable_claws.tscn" type="PackedScene" id=3]
[ext_resource path="res://materials/tron_blue_material.tres" type="Material" id=5]

[node name="right_hand_model" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="BoneAttachment" parent="ArmatureRight/Skeleton" index="0"]
transform = Transform( 0.575561, 0.67335, 0.464036, -0.739133, 0.671136, -0.0570911, -0.349873, -0.310125, 0.883975, -8.31233, 6.69126, 4.37118 )

[node name="BoneAttachment 2" parent="ArmatureRight/Skeleton" index="1"]
transform = Transform( 0.707382, 0.518598, 0.480278, -0.649744, 0.744603, 0.152969, -0.278287, -0.420265, 0.863674, -5.92187, 4.49557, 3.43076 )

[node name="BoneAttachment 3" parent="ArmatureRight/Skeleton" index="2"]
transform = Transform( 0.715415, 0.480301, 0.507437, -0.520631, 0.850801, -0.0712855, -0.465966, -0.213189, 0.858735, -3.59584, 2.80285, 1.91577 )

[node name="BoneAttachment 4" parent="ArmatureRight/Skeleton" index="3"]
transform = Transform( 0.989329, -0.102457, -0.103592, 0.101712, -0.023419, 0.994538, -0.104323, -0.994462, -0.012748, -9.56466, 0.172591, 0.254316 )

[node name="BoneAttachment 5" parent="ArmatureRight/Skeleton" index="4"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 6" parent="ArmatureRight/Skeleton" index="5"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 7" parent="ArmatureRight/Skeleton" index="6"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 8" parent="ArmatureRight/Skeleton" index="7"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 9" parent="ArmatureRight/Skeleton" index="8"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 10" parent="ArmatureRight/Skeleton" index="9"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 11" parent="ArmatureRight/Skeleton" index="10"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 12" parent="ArmatureRight/Skeleton" index="11"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 13" parent="ArmatureRight/Skeleton" index="12"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 14" parent="ArmatureRight/Skeleton" index="13"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 15" parent="ArmatureRight/Skeleton" index="14"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="BoneAttachment 16" parent="ArmatureRight/Skeleton" index="15"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )

[node name="r_handMeshNode" parent="ArmatureRight/Skeleton" index="16"]
visible = false
material/0 = ExtResource( 5 )

[node name="middle_root_bone" type="BoneAttachment" parent="ArmatureRight/Skeleton" index="17"]
transform = Transform( 0.989329, -0.102457, -0.103592, 0.101712, -0.023419, 0.994538, -0.104323, -0.994462, -0.012748, -9.56466, 0.172591, 0.254316 )
bone_name = "b_r_middle_1"

[node name="claws" parent="ArmatureRight/Skeleton/middle_root_bone" index="0" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 1.41421, -1.06066, 0, 1.41421, 1.06066, 2, 2.30405e-07, -1.72803e-07, -2, 0.422, -1.19209e-07 )

[node name="ball_attachment" type="Spatial" parent="ArmatureRight/Skeleton/middle_root_bone" index="1"]
transform = Transform( 10, 1.49012e-07, -1.96742e-07, -1.49012e-07, 10, 3.72529e-08, 1.96742e-07, -3.72529e-08, 10, 0, 0, 0 )

[node name="wrist" type="BoneAttachment" parent="ArmatureRight/Skeleton" index="18"]
